mycss.css
/* Disable all drag and drop */
*, *::after, *::before {
	-webkit-user-select: none;
	-webkit-user-drag: none;
	-webkit-app-region: no-drag;
	cursor: default;
}

.container_all {
    max-width: 1280px;
    /*max-height: 1024px;*/
    width: 100%;
    height: 100%;
    background-color: aqua;
    /*border: solid 0.1vw black;*/
    position: relative;
}

.card {
    display: inline-block;
    width: 32.97%;
    border: solid 1vh black;
}

p {
    visibility: hidden;
    text-align: center;
    font-size: 10%;
}

button {
    width: 100%;
    height: 95%;
    font-size: 2vw;
    border-radius: 50px;
    box-shadow: 0px 10px 14px -7px #276873;
}

button:hover {
    position: relative;
    top: 3px;
}

#timer_text {
    font-size: 4vw;
}

div#pic_container {
    /*max-width: 1280px;*/
    width: 100%;
    height: 100%;
}

/* origin size 1280 x 1024 */
img#pic {
    width: 100%;
    height: 100%;
}

/* origin size 71 x 14 */
/* position x 876.797, y 455.531 */
img.r_sunk {
    position: absolute;
    top: 50.8%;
    left: 69.2%;
    width: 5.546875%;
    height: 1.3671875%;
}

/* origin size 106 x 221 */
/* position x 1167.36, y 490.701 */
img.r_stove {
    position: absolute;
    top: 49%;
    left: 91.7%;
    width: 8.28125%;
    height: 21.58203125%;
}

/* origin size 454 x 653 */
/* origin is too big change to 112 x 159.984 */
/* position x 125.438, y 194.56 */
img.r_paint {
    position: absolute;
    top: 19%;
    left: 9.8%;
    height: 25%;
    width: 8.75%;
}

/* origin size 107 x 191 */
/* position x 1173.75, y 276.48 */
img.r_hood {
    position: absolute;
    top: 27%;
    left: 91.7%;
    width: 8.359375%;
    height: 18.65234375%;
}

/* origin size 200 x 205 */
/* position x 1173.75, y 276.48 */
img.r_win {
    position: absolute;
    top: 29%;
    left: 45%;
    width: 15.625%;
    height: 20.01953125%;
}

img.s_b_1 {
    position: absolute;
    top: 40%;
    left: 20%;
    width: 6%;
    height: 8%;
}

img.s_b_2 {
    position: absolute;
    top: 40%;
    left: 35%;
    width: 6%;
    height: 8%;
}

img.s_b_3 {
    position: absolute;
    top: 52%;
    left: 28%;
    width: 6%;
    height: 8%;
}

img.c_b_1 {
    position: absolute;
    top: 73%;
    left: 20%;
    width: 6%;
    height: 8%;
}

img.c_b_2 {
    position: absolute;
    top: 73%;
    left: 45%;
    width: 6%;
    height: 8%;
}

img.c_b_3 {
    position: absolute;
    top: 78%;
    left: 31%;
    width: 6%;
    height: 8%;
}

img.f_b_1 {
    position: absolute;
    top: 80%;
    left: 60%;
    width: 6%;
    height: 8%;
}

img.f_b_2 {
    position: absolute;
    top: 80%;
    left: 75%;
    width: 6%;
    height: 8%;
}

img.f_b_3 {
    position: absolute;
    top: 69%;
    left: 66%;
    width: 6%;
    height: 8%;
}

img.no_event {
    pointer-events: none;
}

div#hint_board,

div#foot {
    position: absolute;
    top: 90%;
    height: 10%;
    width: 100%;
    /*border: solid 2px black;*/
    opacity: 0.9;
    background-color: antiquewhite;
    justify-items: center;
    align-content: center;
    display: flex;
}

div#foot div {
    width: 25%;
}

div#tool_box {
    position: absolute;
    left: 80.15%;
    top: 0%;
    width: 20%;
    height: 100%;
    background-color: ivory;
}

div.tools {
    background-color: ivory;
    width: 100%;
    height: 10%;
    margin-top: 5%;
    margin-bottom: 5%;
    display: flex;
    align-items: center;
    justify-content: center;
    border-bottom: solid 1px grey;
    border-top: solid 1px grey;
    border-radius: 10px;
}

div.greyBg {
    background-color: grey;
    width: 100%;
    height: 10%;
    margin-top: 5%;
    margin-bottom: 5%;
    display: flex;
    align-items: center;
    justify-content: center;
    border-bottom: solid 1px grey;
    border-top: solid 1px grey;
    border-radius: 10px;
}

div.tools:hover {
    background-color: grey;
}

.anime {
    background: #9c9e9f;
    /* Old browsers */
    background: -moz-linear-gradient(left, #9c9e9f 0%, #f6f6f6 100%);
    /* FF3.6+ */
    background: -webkit-gradient(linear, left top, right top, color-stop(0%, #9c9e9f), color-stop(100%, #f6f6f6));
    /* Chrome,Safari4+ */
    background: -webkit-linear-gradient(left, #9c9e9f 0%, #f6f6f6 100%);
    /* Chrome10+,Safari5.1+ */
    background: -o-linear-gradient(left, #9c9e9f 0%, #f6f6f6 100%);
    /* Opera 11.10+ */
    background: -ms-linear-gradient(left, #9c9e9f 0%, #f6f6f6 100%);
    /* IE10+ */
    background: linear-gradient(to right, #9c9e9f 0%, #f6f6f6 100%);
    /* W3C */
    width: 5%;
    border-radius: 50px;
    animation: anime 1s linear infinite;
}

.anime:after {
    content: "";
    display: block;
    padding-top: 100%;
}

@keyframes anime {
    to {
        transform: rotate(360deg);
    }
}

span#score_board {
    position: absolute;
    font-size: 1.5vw;
    border: solid 0.5px black;
    border-radius: 0 0 20px 20px;
    height: 100%;
    text-align: center;
    left: 80%;
    width: 20%;
}

.speech-bubble {
    position: relative;
    background: ivory;
    border-radius: .4em;
    opacity: 0.8;
}

.speech-bubble:after {
    content: '';
    position: absolute;
    bottom: 0;
    left: 50%;
    width: 0;
    height: 0;
    border: 0.625em solid transparent;
    border-top-color: ivory;
    border-bottom: 0;
    border-left: 0;
    margin-left: -0.312em;
    margin-bottom: -0.625em;
    opacity: 0.8;
}

.speech-bubble-left {
    position: relative;
    background: ivory;
    border-radius: .4em;
    opacity: 0.8;
}

.speech-bubble-left:after {
    content: '';
    position: absolute;
    bottom: 0;
    left: 10%;
    width: 0;
    height: 0;
    border: 0.625em solid transparent;
    border-top-color: ivory;
    border-bottom: 0;
    border-left: 0;
    margin-left: -0.312em;
    margin-bottom: -0.625em;
}

.speech-bubble-right {
    position: relative;
    background: ivory;
    border-radius: .4em;
    opacity: 0.8;
}

.speech-bubble-right:after {
    content: '';
    position: absolute;
    bottom: 0;
    left: 50%;
    width: 0;
    height: 0;
    border: 0.625em solid transparent;
    border-top-color: ivory;
    border-bottom: 0;
    border-right: 0;
    margin-left: -0.312em;
    margin-bottom: -0.625em;
    opacity: 0.8;
}

#info_sunk {
    position: absolute;
    top: 32%;
    left: 65%;
    font-size: 1.5vw;
    height: 15%;
    width: 25%;
    visibility: hidden;
}

#info_win {
    position: absolute;
    top: 14%;
    left: 40%;
    font-size: 1.5vw;
    height: 15%;
    width: 30%;
    visibility: hidden;
}

#info_carpet {
    position: absolute;
    top: 60%;
    left: 30%;
    font-size: 1.5vw;
    height: 10%;
    width: 20%;
    visibility: hidden;
}

#info_shelf {
    position: absolute;
    top: 25%;
    left: 20%;
    font-size: 1.5vw;
    height: 12.8%;
    width: 20%;
    visibility: hidden;
}

#info_paint {
    position: absolute;
    top: 5%;
    left: 10%;
    font-size: 1.5vw;
    height: 10%;
    width: 30%;
    visibility: hidden;
}

#info_hook {
    position: absolute;
    top: 15%;
    left: 80%;
    font-size: 1.5vw;
    height: 14%;
    width: 20%;
    visibility: hidden;
}

#info_floor {
    position: absolute;
    top: 59%;
    left: 70%;
    font-size: 1.5vw;
    height: 14%;
    width: 20%;
    visibility: hidden;
}

